# DocX-Template

./: COPYRIGHT  README.md
api/: pyproject.toml
web/: .gitignore  package-lock.json  package.json
